fix: on mobile homepage can't scroll to bottom of statistics

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   flex: 1;
   background-color: #f7f6f6;
   overflow-y: auto;
+  padding-bottom: 100px;
 }
 
 .loading {
